--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <h3><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></h3>
               <br>
               <div class="">
-                <a class="btn btn-theme btn-sm btn-min-block" href="#about">About us</a><a class="btn btn-theme btn-sm btn-min-block" href="#works">Our works</a></div>
+                <a class="btn btn-theme btn-sm btn-min-block" href="#about">About us</a><a class="btn btn-theme btn-sm btn-min-block" href="#https://drive.google.com/drive/folders/1uVcvSwD6rCqD7FoU4pqFg9ruZYKtxCve">Our works</a></div>
             </div>
           </div>
           <!-- /header-text -->
